--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "@prisma/client": "^6.15.0",
+    "express": "^5.1.0",
+    "mongodb": "^6.19.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
